U6006 Game Rewards Info Popup - implemented info button popup, currently pure html and css. todo: fix modal width and money alignment

--- a/src/main/resources/static/css/slot.css
+++ b/src/main/resources/static/css/slot.css
@@ -167,6 +167,25 @@ body {
 .container .info {
     padding-top: 1rem;
     padding-bottom: 3rem;
+    position: relative;
+}
+
+.container .info .info-button {
+    background-color: #3D7B36;
+    color: floralwhite;
+    border-radius: 50%;
+    padding: 0;
+    margin: 0;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.container .info .info-button:hover {
+    background-color: #72543C;
+    cursor: pointer;
 }
 
 .container .info .instructions {
@@ -188,10 +207,6 @@ body {
     font-family: "Fredoka One", sans-serif;
     font-size: 1.3rem;
 }
-/*TODO delete this*/
-.container .info .prize-table .doubles {
-    padding-right: 2rem;
-}
 
 .container .info .prize-table .prize-item {
     opacity: 0.4;
@@ -199,6 +214,69 @@ body {
 }
 
 .container .info .prize-table .prize-item.active {
+    opacity: 1;
+    animation: winFlashPrizeTable 1s infinite;
+}
+
+/* Modal styles */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.modal-content .rewards-centre {
+    background-color: #fefefe;
+    text-align: center;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.prize-table {
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+    color: #0a3407; /* $textCol */
+    /*font-weight: bold;*/
+    font-family: "Fredoka One", sans-serif;
+    font-size: 1.3rem;
+}
+
+
+.prize-table .prize-item {
+    margin-bottom: 0.2rem;
+}
+
+.prize-table .prize-item.active {
     opacity: 1;
     animation: winFlashPrizeTable 1s infinite;
 }
